# imgui_hook_demo

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
console_app/: CMakeLists.txt
console_app/src/: main.cpp
d3d_demo/: CMakeLists.txt
d3d_demo/include/: pch.h
d3d_demo/src/: d3d_demo.cpp  d3d_demo.h  d3d_utils.cpp  d3d_utils.h  main.cpp
dll_injector/: CMakeLists.txt
dll_injector/src/: main.cpp  main.h
hacker_demo/: CMakeLists.txt  hacker_demo.cpp  hacker_demo.h
hacker_demo/src/: imgui_controller.cpp  imgui_controller.h  main.cpp  view.cppm  view.hpp
imgui_hook/: CMakeLists.txt
imgui_hook/imgui/: imgui_core.cpp  imgui_core.h
imgui_hook/imgui/backends/: imgui_impl_dx11.cpp  imgui_impl_opengl3_loader.h  imgui_impl_win32.h
imgui_hook/imgui/hook/: hook_dx11_impl.cpp  hook_dx11_impl.h  hook_dx9_impl.cpp  hook_dx9_impl.h  hook_opengl_impl.cpp  hook_opengl_impl.h
imgui_hook/imgui/impl/: imgui_d311_impl.cpp  imgui_d311_impl.h  imgui_opengl_impl.cpp  imgui_opengl_impl.h
imgui_hook/imgui/utils/: dx_utils.cpp  dx_utils.h
imgui_hook/include/: pch.h
imgui_hook/lib/imgui_impl/: imgui_impl_win32.cpp
imgui_hook/lib/logger/: logger.h
imgui_hook/lib/utils/: d3d_utils.cpp  d3d_utils.h
imgui_hook/src/: d3d_hook.cpp  d3d_hook.h  imgui_core.cpp  imgui_core.h  imgui_drawer.cpp  imgui_drawer.h  main.cpp
imgui_hook/src/imgui/: imgui_d311_impl.cpp  imgui_d311_impl.h  imgui_opengl_impl.cpp  imgui_opengl_impl.h
imgui_standalone/: CMakeLists.txt
imgui_standalone/lib/imgui_impl/: imgui_impl_dx11.h
imgui_standalone/src/: imgui_controller.cpp
imgui_wrapper/: CMakeLists.txt
imgui_wrapper/include/: view_base.h
injected_dll/: CMakeLists.txt
injected_dll/include/: main.h  main_view.h  pch.h
injected_dll/src/: hook_demo.cpp  hook_demo.h  main.cpp  main.h  main_view.cpp
qt_windows/: CMakeLists.txt
qt_windows/include/: pch.h
qt_windows/src/: main.cpp  main_window.ui
qt_windows/src/ui/: main_window.cpp  main_window.h
qt_windows/src/worker/: process_worker.cpp  process_worker.h
qt_windows/ui/: main_window.ui
runner/: CMakeLists.txt
runner/src/: main.cpp
ui_demo/: CMakeLists.txt
ui_demo/include/: imgui_controller.h  main.h  main_view.h  process_view.h  view.h  view_base.h
ui_demo/src/: imgui_controller.cpp  imgui_controller.h  main.cpp  main.h  main_view.cpp  process_view.cpp  view.cpp  view.hpp
win32_helper/: CMakeLists.txt
win32_helper/include/: dialog.h  dll_injector.h  event_loop.h  handle_manager.h  pch.h  process_helper.h  raii.h  stdafx.h  string_helper.h  win32_dialog.h
win32_helper/module/: raii.ixx
win32_helper/src/: dialog.cpp  dll_injector.cpp  event_loop.cpp  handle_manager.cpp  process_helper.cpp  raii.cpp  string_helper.cpp  win32_dialog.cpp
